<resources>
    <string name="app_name">GitHub Timeline</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_detail">Detail</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_info">Info</string>
    <string name="action_share">Share</string>
    <string name="action_favourite">Favorite</string>
    <string name="action_view">View</string>

    <string name="url_feed">https://github.com/timeline</string>

    <string name="published">Published</string>
    <string name="updated">Updated</string>
    <string name="link">Link</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="uri">Uri</string>
    <string name="profile_image">Profile image</string>

</resources>
