<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity" >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_attachment_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/action_view"
        android:icon="@drawable/ic_explore_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:title="@string/action_favourite"
        android:icon="@drawable/ic_favorite_24dp"
        app:showAsAction="always"/>

</menu>